--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
 	"version": "1.0.0",
 	"main": "./src/index.js",
 	"scripts": {
-		"test": "echo \"Error: no test specified\" && exit 1"
+		"test": "echo \"Error: no test specified\" && exit 1",
+		"lint": "eslint \"./**/*.js\" --ignore-path .gitignore"
 	},
 	"repository": {
 		"type": "git",
@@ -25,5 +26,17 @@
 		"debug": "^4.2.0",
 		"got": "^11.8.0",
 		"ws": "^7.3.1"
+	},
+	"devDependencies": {
+		"eslint": "^6.8.0",
+		"eslint-config-haykam": "^1.8.0",
+		"eslint-plugin-extra-rules": "0.0.0-development",
+		"eslint-plugin-html": "^6.1.0",
+		"eslint-plugin-json": "^1.4.0",
+		"eslint-plugin-markdown": "^1.0.2",
+		"eslint-plugin-unicorn": "^10.0.0"
+	},
+	"eslintConfig": {
+		"extends": "eslint-config-haykam"
 	}
 }
